--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "typed.js": "^2.0.6"
   },
   "scripts": {
-    
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
