--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^1.0.17",
     "react-typed": "^1.0.7",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
