--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "google-map-react": "^0.29.0",
     "material-ui": "^0.20.0",
     "npm": "^5.6.0",
+    "query-string": "^6.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
